@@ -1,10 +1,12 @@
 ﻿IMPROVEMENTS / FIXES
 - AI:
 	- Set the main throttle, pitch, yaw and roll axis groups when setting the flight control state. This allows use of axis groups in BDA+ with these axes.
-- VM:
+- VesselMover:
 	- Add option to immediately place the vessel after spawning.
 	- Adjustments to movement in map mode.
 	- Safer placement-lower.
+- UI:
+	- Auto-switch UI focus to new input text fields in Vessel Mover and Custom Spawn Templates.
 - Competition:
 	- Add sorting and "scores" for waypoint runs in the Vessel Switcher for waypoints game mode.
 
